Se agregaron metodos de auth a el swagger
