# project/api/infoCarreras.py
@@ -9,7 +9,8 @@ class InfoCarreras(Resource):
     @jwt_required
     def get(self):
         bar = request.args.to_dict()
-        print (bar)        
+        lista = bar['codCarreras'].split(",")
+        print (lista)        
         return {"Nombre de Carrera": "nombre", "Codigo de Carrera": "codCarrera", "Nem": "numero"}, 200
 
 infoCarreras_namespace.add_resource(InfoCarreras, "")
